--- a/index.html
+++ b/index.html
@@ -5,32 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMI Calculator</title>
-    <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
-    <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-    <!-- JS -->
     <script defer src="./js/app.js"></script>
 </head>
-<body>
-    <main class="d-flex flex-column align-items-center justify-content-center bg-dark h-100">
-        <div class="card bg-light">
-            <div class="card-body">
-                <form>
-                    <div class="form-group">
-                        <input data-height type="number" class="form-control form-control-lg" placeholder="Height [cm]">
-                    </div>
-
-                    <div class="form-group">
-                        <input data-weight type="number" class="form-control form-control-lg" id="weight" aria-describedby="emailHelp" placeholder="Weight [kg]">
-                    </div>
-
-                    <button data-calculate type="button" class="btn btn-primary btn-block">Calculate</button>
-                </form>
-            </div>
+<body class="d-flex flex-column">
+    <header class="d-flex align-items-center bg-light p-2">
+        <div class="flex-fill">
+            <h6 class="m-0">Body Mass Index Calculator</h6>
         </div>
+
+        <div class="custom-control custom-switch">
+            <input type="checkbox" class="custom-control-input" id="system-switch">
+            <label class="custom-control-label" for="system-switch">IMPERIAL</label>
+        </div>
+    </header>
+
+    <hr class="m-0">
+    
+    <main class="flex-fill d-flex flex-column">
+        <form class="bg-light p-2">
+            <div class="form-row">
+                <div class="col">
+                    <div class="input-group input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text text-height" id="inputGroup-sizing-sm">CM</span>
+                        </div>
+                        <input data-height type="text" class="form-control">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="input-group input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text text-weight" id="inputGroup-sizing-sm">KG</span>
+                        </div>
+                        <input data-weight type="text" class="form-control">
+                    </div>
+                </div>
+            </div>
+
+            <button type="button" class="btn btn-primary btn-block btn-calculate mt-2">CALCULATE</button>
+        </form>
+
+        <hr class="m-0">
+
+        <div class="flex-fill d-flex overflow-auto result"></div>
     </main>
+
+    <hr class="m-0">
+
+    <footer class="d-flex bg-light p-2">
+        <div class="flex-even text-center bg-warning text-light rounded-sm py-1">UNDERWEIGHT</div>
+        <div class="flex-even text-center bg-success text-light rounded-sm mx-2 py-1">NORMAL</div>
+        <div class="flex-even text-center bg-danger text-light rounded-sm py-1">OVERWEIGHT</div>
+    </footer>
 </body>
 </html>
